force-app/main/default/objects/Resource_Role__c/fields/Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit__c</fullName>
    <label>Billing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
                <default>true</default>
                <label>Hour</label>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>