force-app/main/default/objects/Resource_Role__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the resource role, responsibilities, and skill sets.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>