force-app/main/default/objects/Resource_Role__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <description>Auto-generated ID for each resource role.</description>
    <displayFormat>RR-{00000}</displayFormat>
    <label>Role ID</label>
    <type>AutoNumber</type>
</CustomField>